[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://Scenes/UI/base_health_hud.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
content_margin_left = 12.0
content_margin_top = 10.0
content_margin_right = 12.0
content_margin_bottom = 10.0
bg_color = Color(0.05, 0.08, 0.12, 0.92)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.3, 0.42, 0.75)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_header"]
content_margin_left = 10.0
content_margin_top = 8.0
content_margin_right = 10.0
content_margin_bottom = 8.0
bg_color = Color(0.07, 0.11, 0.17, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.32, 0.45, 0.65)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_bg"]
bg_color = Color(0.05, 0.07, 0.1, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.3, 0.4, 0.6)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="BaseHealthHUD" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 16.0
offset_right = 160.0
offset_bottom = 90.0
grow_horizontal = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Content" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="PanelContainer" parent="Panel/Content"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_header")

[node name="HeaderRow" type="HBoxContainer" parent="Panel/Content/Header"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Panel/Content/Header/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Base Station"
theme_override_colors/font_color = Color(0.85, 0.95, 1, 1)
theme_override_font_sizes/font_size = 14

[node name="HealthLabel" type="Label" parent="Panel/Content/Header/HeaderRow"]
layout_mode = 2
custom_minimum_size = Vector2(100, 0)
horizontal_alignment = 2
vertical_alignment = 1
text = "500 / 500"
theme_override_colors/font_color = Color(0.7, 0.82, 0.95, 1)
theme_override_font_sizes/font_size = 12

[node name="HealthBar" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2
custom_minimum_size = Vector2(0, 14)

[node name="HealthProgress" type="ProgressBar" parent="Panel/Content/HealthBar"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 14)
max_value = 500.0
value = 500.0
show_percentage = false
theme_override_styles/background = SubResource("StyleBoxFlat_progress_bg")
